# src/routes/rickmorty.routes.js
@@ -9,12 +9,12 @@ const swaggerDocument = require('../../swagger.json');
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-router.get('/all-characters', charactersController.allCharactersController);
-router.get('/find/:id', validId, charactersController.characterByIdController);
-router.get('/single/:name', charactersController.characterByNameController);
-router.post('/create', validObjectBody, charactersController.createCharacterController);
-router.put('/update/:id', validId, validObjectBody, charactersController.updateCharacterController);
-router.delete('/delete/:id', validId, charactersController.deleteSingleController);
-router.delete('/characters/', charactersController.deleteAllController);
+router.get('/characters', charactersController.allCharactersController);
+router.get('/characters/find/:id', validId, charactersController.characterByIdController);
+router.get('/characters/search/:name', charactersController.characterByNameController);
+router.post('/characters/create', validObjectBody, charactersController.createCharacterController);
+router.put('/characters/update/:id', validId, validObjectBody, charactersController.updateCharacterController);
+router.delete('/characters/delete/:id', validId, charactersController.deleteSingleController);
+router.delete('/characters/delete-all', charactersController.deleteAllController);
 
 module.exports = router;
